# rayclaw

./: Cargo.toml  acp.json.example  rayclaw.config.example.yaml
docs/: SELF-EVOLUTION-COMPLETED.md  SELF-EVOLUTION-PROPOSAL.md  SELF-EVOLUTION-ROADMAP.md  rayclaw-evolution-tasks.md
rayclaw.data/skills/coding-agent/: SKILL.md
src/: acp.rs  agent_engine.rs  config.rs  db.rs  embedding.rs  error.rs  error_classifier.rs  gateway.rs  lib.rs  llm.rs  llm_bedrock.rs  mcp.rs  metrics.rs  scheduler.rs  skill_evolution.rs  skills.rs  web.rs
src/channels/: feishu.rs  weixin.rs
src/tools/: acp.rs  feishu_doc.rs  mod.rs  send_message.rs  sub_agent.rs  web_html.rs
tests/: acp_integration.rs  config_validation.rs  error_classifier_integration.rs
