[package]
name = "rayclaw"
version = "0.2.4"
edition = "2021"
license = "MIT"
description = "Multi-channel agentic AI runtime with tool-calling, memory, and scheduling"
repository = "https://github.com/rayclaw/rayclaw"
keywords = ["ai", "agent", "llm", "chatbot", "runtime"]
categories = ["api-bindings", "asynchronous"]
include = [
    "/src/**/*",
    "/web/dist/**/*",
    "/rayclaw.data/**/*",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
    "/SOUL.md",
    "/build.rs",
]

[features]
default = ["telegram", "discord", "slack", "feishu", "weixin", "web"]
all = ["telegram", "discord", "slack", "feishu", "weixin", "web"]
telegram = ["dep:teloxide"]
discord = ["dep:serenity"]
slack = []
feishu = []
weixin = []
web = ["dep:axum"]
sqlite-vec = ["dep:sqlite-vec"]
openssl-vendored = ["dep:openssl"]

[dependencies]
teloxide = { version = "0.17", features = ["macros"], optional = true }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking", "stream", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
regex = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
cron = "0.13"
urlencoding = "2"
base64 = "0.22"
chrono-tz = "0.10"
axum = { version = "0.7", optional = true }
dialoguer = "0.11"
console = "0.15"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"], optional = true }
include_dir = "0.7"
async-stream = "0.3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
crc32fast = "1"
sqlite-vec = { version = "0.1.7-alpha.10", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
qrcode = "0.14"
aes = "0.8"
cipher = { version = "0.4", features = ["alloc", "block-padding"] }
ecb = "0.1"
md-5 = "0.10"

[dev-dependencies]
tower = "0.5"
http = "1"
